--- a/src/Strava.NET.csproj
+++ b/src/Strava.NET.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<Authors>Tim Heuer</Authors>
+		<TargetFramework>net6.0</TargetFramework>
+		<Authors>Tim Heuer, Richard Garside</Authors>
 		<Product>Strava .NET SDK</Product>
 		<Description>A .NET library to access the Strava API surface area</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -14,7 +14,8 @@
 		<PackageIcon>icon.png</PackageIcon>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
-		<Version>1.0.1</Version>
+		<Version>2.0.0</Version>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
 		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
